--- a/client/src/App.css
+++ b/client/src/App.css
@@ -43,7 +43,7 @@ body {
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.9);
   background-position: right 10px top;
-  height: 150vh;
+  height: auto;
 }
 .clinic {
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)),
